cleaning notebook outputs

--- a/03 - Prompt Injection Classification with Word2Vec.ipynb
+++ b/03 - Prompt Injection Classification with Word2Vec.ipynb
@@ -181,13 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = GridSearchCV(RandomForestClassifier(), param_grid={\n",
-    "    'n_estimators': [50, 100, 200, 500],\n",
-    "    'max_features': ['auto', 'sqrt', 'log2'],\n",
-    "    'max_depth': [4, 5, 6, 7, 8],\n",
-    "    'criterion': ['gini', 'entropy']\n",
-    "}, scoring='accuracy', cv=5, n_jobs=-1)\n",
-    "\n",
+    "clf = RandomForestClassifier()\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -231,12 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = GridSearchCV(GradientBoostingClassifier(), param_grid={\n",
-    "    'learning_rate': [0.01, 0.05, 0.1, 0.2],\n",
-    "    'max_depth': [2, 3, 5, 7],\n",
-    "    'n_estimators': [50, 100, 200]\n",
-    "}, scoring='accuracy', cv=5, n_jobs=-1)\n",
-    "\n",
+    "clf = GradientBoostingClassifier()\n",
     "clf.fit(X_train, y_train)"
    ]
   },
@@ -280,14 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = GridSearchCV(SVC(probability=True), [\n",
-    "    {'kernel': ['rbf'], 'gamma': 2 ** np.arange(-15.0, 4.0, 2),\n",
-    "        'C': 2 ** np.arange(-5.0, 16.0, 2)},\n",
-    "    {'kernel': ['linear'], 'C': 2 ** np.arange(-5.0, 16.0, 2)},\n",
-    "    {'kernel': ['poly'], 'C': 2 ** np.arange(-5.0, 16.0, 2),\n",
-    "        'degree': [2, 3, 4, 5]}\n",
-    "], scoring='accuracy', cv=5, n_jobs=-1)\n",
-    "\n",
+    "clf = SVC()\n",
     "clf.fit(X_train, y_train)"
    ]
   },
