--- a/05 - Prompt Injection Classification with BERT.ipynb
+++ b/05 - Prompt Injection Classification with BERT.ipynb
@@ -52,6 +52,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34283b8a-ae8c-41b1-9c3a-220ac4cb88b1",
+   "metadata": {},
+   "source": [
+    "## Utils"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a7b2cd48-9bbb-4098-bb0f-efcb298d36ce",
@@ -94,79 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d10c6ee4-8c5e-414b-9b17-8bbba468d29b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_data_loader(df, tokenizer, max_len, batch_size):\n",
-    "  ds = PromptInjectionDataset(\n",
-    "    prompts=df.prompt.to_numpy(),\n",
-    "    labels=df.label.to_numpy(),\n",
-    "    tokenizer=tokenizer,\n",
-    "    max_len=max_len\n",
-    "  )\n",
-    "\n",
-    "  return DataLoader(\n",
-    "    ds,\n",
-    "    batch_size=batch_size,\n",
-    "    num_workers=4\n",
-    "  )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4eb401c6-7d19-4d2d-b10d-f3352f17a0d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('data/prompts.csv')\n",
-    "data.dropna(inplace=True)\n",
-    "\n",
-    "df_train, df_test = train_test_split(data, test_size=0.2)\n",
-    "df_val, df_test = train_test_split(df_test, test_size=0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8052df4-8bea-40d4-9759-7a91cc872d60",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MODEL_NAME = 'bert-base-cased' # | 'xlm-roberta-base'\n",
-    "NUM_CLASSES = 2\n",
-    "MAX_LEN = 128\n",
-    "BATCH_SIZE = 8\n",
-    "N_EPOCHS = 4\n",
-    "LEARN_RATE = 2e-5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3554b7ef-064d-42e3-b4f8-67edb7bd8b7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b74191cb-d723-40a4-9e72-39f25eaa52f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data_loader = create_data_loader(df_train, tokenizer, MAX_LEN, BATCH_SIZE)\n",
-    "val_data_loader = create_data_loader(df_val, tokenizer, MAX_LEN, BATCH_SIZE)\n",
-    "test_data_loader = create_data_loader(df_test, tokenizer, MAX_LEN, BATCH_SIZE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "03df0e57-061f-4e07-9289-57eca098cd01",
    "metadata": {},
    "outputs": [],
@@ -191,31 +126,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9637dcb-5926-4ec6-b479-50b55c44caed",
+   "id": "d10c6ee4-8c5e-414b-9b17-8bbba468d29b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = PromptInjectionClassifier(NUM_CLASSES).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c624373-b70a-49bb-b924-cfb82127e6f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "optimizer = AdamW(model.parameters(), lr=LEARN_RATE, correct_bias=False)\n",
-    "total_steps = len(train_data_loader) * N_EPOCHS\n",
+    "def create_data_loader(df, tokenizer, max_len, batch_size):\n",
+    "  ds = PromptInjectionDataset(\n",
+    "    prompts=df.prompt.to_numpy(),\n",
+    "    labels=df.label.to_numpy(),\n",
+    "    tokenizer=tokenizer,\n",
+    "    max_len=max_len\n",
+    "  )\n",
     "\n",
-    "scheduler = get_linear_schedule_with_warmup(\n",
-    "  optimizer,\n",
-    "  num_warmup_steps=0,\n",
-    "  num_training_steps=total_steps\n",
-    ")\n",
-    "\n",
-    "loss_fn = nn.CrossEntropyLoss().to(device)"
+    "  return DataLoader(\n",
+    "    ds,\n",
+    "    batch_size=batch_size,\n",
+    "    num_workers=4\n",
+    "  )"
    ]
   },
   {
@@ -355,6 +282,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f71855b6-da64-498d-b264-9b7474fdb699",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4945550-a40d-4124-8f24-e4c9323444cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_injection_train = pd.read_csv('data/prompt_injection_train.csv')\n",
+    "prompt_injection_test = pd.read_csv('data/prompt_injection_test.csv')\n",
+    "prompt_injection_validation = pd.read_csv('data/prompt_injection_validation.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66da2ef1-5720-42f3-8018-d61e9d1835c4",
+   "metadata": {},
+   "source": [
+    "## Execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8052df4-8bea-40d4-9759-7a91cc872d60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_NAME = 'bert-base-cased' # | 'xlm-roberta-base'\n",
+    "NUM_CLASSES = 2\n",
+    "MAX_LEN = 128\n",
+    "BATCH_SIZE = 8\n",
+    "N_EPOCHS = 4\n",
+    "LEARN_RATE = 2e-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3554b7ef-064d-42e3-b4f8-67edb7bd8b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74191cb-d723-40a4-9e72-39f25eaa52f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_loader = create_data_loader(df_train, tokenizer, MAX_LEN, BATCH_SIZE)\n",
+    "val_data_loader = create_data_loader(df_val, tokenizer, MAX_LEN, BATCH_SIZE)\n",
+    "test_data_loader = create_data_loader(df_test, tokenizer, MAX_LEN, BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9637dcb-5926-4ec6-b479-50b55c44caed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = PromptInjectionClassifier(NUM_CLASSES).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c624373-b70a-49bb-b924-cfb82127e6f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = AdamW(model.parameters(), lr=LEARN_RATE, correct_bias=False)\n",
+    "total_steps = len(train_data_loader) * N_EPOCHS\n",
+    "\n",
+    "scheduler = get_linear_schedule_with_warmup(\n",
+    "  optimizer,\n",
+    "  num_warmup_steps=0,\n",
+    "  num_training_steps=total_steps\n",
+    ")\n",
+    "\n",
+    "loss_fn = nn.CrossEntropyLoss().to(device)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e1153c04-d758-432d-9d41-23edc4183794",
@@ -391,8 +413,7 @@
     "    len(df_val)\n",
     "  )\n",
     "\n",
-    "  print(f'Val   loss {val_loss} accuracy {val_acc}')\n",
-    "  print()\n",
+    "  print(f'Val   loss {val_loss} accuracy {val_acc}\\n')\n",
     "\n",
     "  history['train_acc'].append(train_acc)\n",
     "  history['train_loss'].append(train_loss)\n",
@@ -514,17 +535,6 @@
    "outputs": [],
    "source": [
     "result.loc[result['true_label'] != result['predicted_label']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd70d022-b7a0-4b82-9ef4-63a476360a5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# stem e lemma \n",
-    "# utilizar o shape para análise do texto"
    ]
   }
  ],
