cleaning notebook outputs

--- a/05 - Prompt Injection Classification with BERT.ipynb
+++ b/05 - Prompt Injection Classification with BERT.ipynb
@@ -436,6 +436,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e61c0266-e6d8-41a4-a201-5c7f1bb9e36c",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5e4caa12-2b73-48a6-ac53-c86a3d9fe521",
